FrostWire 2.0.5 build 527 - MAY/06/2018
 - New: Telugu translation available for 75 million speakers

FrostWire 2.0.4 build 526 - MAY/01/2018
 - New jlibtorrent 1.2.0.18-RC4
 - jlibtorrent: updated to boost 1.67.0
 - jlibtorrent: updated to OpenSSL 1.1.0h
 - jlibtorrent: fix storage initialization
 - jlibtorrent: don't perform DNS lookups for the DHT bootstrap unless DHT is enabled
 - jlibtorrent: stat files in the disk thread
 - jlibtorrent: source code cleanup, performance and stability
 - jlibtorrent: issue query block size from torrent before metadata has been received
 - jlibtorrent: source code cleanup, performance and stability
 - jlibtorrent: honor torrent abort even on file check error
 - Library updates: gms 15.0.0, re2j 1.2, applovin 8.0.0, prebid
 - Translations updated, Hungarian, Hindi
 - Music player clean up, crashes and optimizations
 - Advanced Transfer Piece viewer rendering optimizations
 - Search Filtering optimizations
 - Bug where Creative Commons features would dissapear on Plus fixed

FrostWire 2.0.3 build 521 - APR/12/2018
 - Search: Yify fixed
 - Issues with Android 8.0 notifications fixed
 - Fixes a title refresh issue on My Files when switching file types
 - Fixes a bug deleting a picture from the picture viewer screen
 - Library updates: applovin 7.8.6, gms 12.0.1
 - Translations updated: Czech, Greek, Danish
 - Performance upgrades

FrostWire 2.0.2 build 515 - MAR/26/2018
 - Application startup is faster
 - Faster YT downloads
 - Zooqle search fixes
 - TorrentDownloads search fixes
 - LimeTorrents search fixes
 - Library updates: jlibtorrent 1.2.0.17, applovin 7.8.5, ogury 2.2.8, mopub 4.20.0, okhttp 3.10.0, gson 2.8.2, gradle 4.6, gradle plugin 3.1.0, support libraries 27.1.0, gms 12.0.0
 - When audio files are deleted from "My Files" they're now cleared from "Recents" in "My Music"
 - Bug where deleted .torrent files would reappear fixed
 - Translations updated, Urdu update
 - Loads of Crash and Freeze fixes